# cutpointpy

./: README.md  pyproject.toml
src/cutpointpy/: core.py  utils.py
tests/: common.py  test_auc.py  test_cm.py  test_cm_performance_metrics.py
