[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
authors = [
  {name = 'Francesco Bianconi', email = 'bianco@ieee.org'},
]
description = 'Optimal cut-point calculation of a predictor variable for binary classification tasks'
dependencies = [
    'numpy',
    'scikit-learn',
]
keywords = ['binary classification',
            'optimal cut-point',
            'ROC analysis',
            'sensitivity',
            'specificity']
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
name = 'cutpointpy'
readme = 'README.md'
requires-python = '>=3.14'
version = '0.1.0'

[project.urls]
home = 'https://github.com/bianconif/cutpointpy'
repository = 'https://github.com/bianconif/cutpointpy'

[tool.setuptools.packages.find]
where = ['src']
