[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
authors = [
  {name = 'Francesco Bianconi', email = 'bianco@ieee.org'},
]
description = 'Optimal cut-point calculation of a predictor variable for binary classification tasks'
dependencies = [
    'numpy',
    'scikit-learn',
]
dynamic = [
    'version'
]
keywords = ['binary classification',
            'optimal cut-point',
            'ROC analysis',
            'sensitivity',
            'specificity']
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
name = 'cutpointpy'
readme = 'README.md'
requires-python = '>=3.14'


[project.urls]
home = 'https://github.com/bianconif/cutpointpy'
repository = 'https://github.com/bianconif/cutpointpy'

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools_scm]
local_scheme = 'no-local-version'
version_scheme = 'no-guess-dev'
